chore: set default font size for buttons

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -16,6 +16,7 @@ a[button],
     background-color: var(--color);
     border: 1px solid var(--color);
     color: var(--font-light);
+    font-size: 1rem;
     min-height: 3em;
 
     &.inverse {
