chore: tweak pixel sizes to be relative to base font size

--- a/apps/outlook-addin/src/app/rooms/filter-space/filter-space.component.html
+++ b/apps/outlook-addin/src/app/rooms/filter-space/filter-space.component.html
@@ -4,7 +4,7 @@
             class="flex flex-col border-b border-gray-300 py-5 items-center"
         >
             <div
-                class="flex flex-col w-[calc(100%-2rem)] max-w-[360px] self-center"
+                class="flex flex-col w-[calc(100%-2rem)] max-w-[22.5rem] self-center"
             >
                 <div class="flex flex-row items-center">
                     <button (click)="closeModal()">
@@ -22,7 +22,7 @@
         </section>
         <section class="flex flex-col border-b border-gray-300 items-center">
             <div
-                class="flex flex-col w-[calc(100%-2rem)] max-w-[360px] self-center"
+                class="flex flex-col w-[calc(100%-2rem)] max-w-[22.5rem] self-center"
             >
                 <div class="my-2 text-lg">Details</div>
 
@@ -103,7 +103,7 @@
 
         <section class="flex flex-col border-b border-gray-300 items-center">
             <div
-                class="flex flex-col w-[calc(100%-2rem)] max-w-[360px] self-center"
+                class="flex flex-col w-[calc(100%-2rem)] max-w-[22.5rem] self-center"
             >
                 <div class="my-2 text-lg">Favourites</div>
                 <div class="flex flex-row mb-2">
@@ -114,7 +114,7 @@
         </section>
 
         <section class="flex flex-col border-gray-300">
-            <div class="w-[calc(100%-2rem)] max-w-[360px] mx-auto">
+            <div class="w-[calc(100%-2rem)] max-w-[22.5rem] mx-auto">
                 <div class="my-2 text-lg">Facilities</div>
 
                 <div *ngFor="let feature of features$ | async">
