style(survey/concierge): add svg to assets folder for drag and drop icon

--- a/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
+++ b/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
@@ -217,8 +217,8 @@
                                 >
                                     <img
                                         src="assets/icons/dragdrop.svg"
-                                        alt="Icon"
-                                        height="30px"
+                                        class="h-12"
+                                        alt="Icon of drag and drop"
                                     />
                                     <span
                                         >Please add a question in the 'Design'
@@ -328,7 +328,11 @@
 
 <ng-template #none>
     <div class="none-selected">
-        <img src="assets/icons/dragdrop.svg" alt="Icon" height="30px" />
+        <img
+            src="assets/icons/dragdrop.svg"
+            class="h-12"
+            alt="Icon of drag and drop"
+        />
         <span>Click and drag to add questions from the question bank here</span>
     </div>
 </ng-template>
