chore(survey/concierge): add routing to Save Survey button in DesignPreviewContainerComponent

--- a/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
+++ b/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
@@ -20,7 +20,7 @@
                     class="add-button"
                     color="primary"
                     (click)="surveyCreatorService.updateSurveysList()"
-                    [routerLink]="'/list'"
+                    (click)="navigate()"
                 >
                     Save Survey
                 </button>
