style(survey/concierge): vertically align text in button

--- a/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
+++ b/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
@@ -17,12 +17,12 @@
             <div class="right-wrapper">
                 <button
                     mat-button
-                    class="add-button"
+                    class="add-button align-middle"
                     color="primary"
                     (click)="surveyCreatorService.updateSurveysList()"
                     (click)="navigate()"
                 >
-                    Save Survey
+                    <span>Save Survey</span>
                 </button>
             </div>
         </header>
