fix: various issues

--- a/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
+++ b/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
@@ -19,8 +19,7 @@
                     mat-button
                     class="add-button align-middle"
                     color="primary"
-                    (click)="surveyCreatorService.updateSurveysList()"
-                    (click)="navigate()"
+                    (click)="complete()"
                 >
                     <span>Save Survey</span>
                 </button>
