style(survey/concierge): remove unnecessary <section> tags and replace with <div>

--- a/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
+++ b/apps/concierge/src/app/surveys/pages/design-preview-container.component.html
@@ -3,7 +3,7 @@
 <main
     class="relative w-full h-full bg-gray-100 dark:bg-neutral-600 overflow-y-auto"
 >
-    <section class="page-wrapper">
+    <div class="page-wrapper">
         <header class="heading-wrapper">
             <div class="left-wrapper">
                 <span
@@ -320,7 +320,7 @@
                 </ng-template>
             </aside>
         </div>
-    </section>
+    </div>
 </main>
 
 <ng-template #none>
