fix: various fixes and tweaks

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -258,7 +258,7 @@ mat-select {
         overflow: visible;
     }
 
-    .mat-form-field-wrapper {
+    :not(.mat-origin) .mat-form-field-wrapper {
         .mat-form-field-label {
             top: 2em;
             margin-top: -0.1em;
