--- a/apps/concierge/src/app/surveys/components/survey-builder/survey-builder.component.html
+++ b/apps/concierge/src/app/surveys/components/survey-builder/survey-builder.component.html
@@ -1,93 +1,147 @@
-<sidebar></sidebar>
-<main cdkDropListGroup class="flex flex-col h-full w-full bg-white dark:bg-neutral-600 overflow-y-auto">
-
-    <header class="flex items-center w-full px-6 py-4">
-        <h2 class="text-xl">New Survey</h2>
-    </header>
-
-    <div class="flex w-full items-center px-6 py-4">
-        <span>Filters...</span>
-        <div class="flex ml-auto">
-            <button mat-button>Save</button>
+<div *ngIf="survey" cdkDropListGroup class="flex flex-col h-full w-full bg-white dark:bg-neutral-600 overflow-y-auto">
+    
+    <div class="flex flex-row items-center w-full space-x-4 px-4 pt-4">
+        <div class="flex flex-col w-1/2">
+            <!-- <label for="title">Title</label> -->
+            <mat-form-field name="title" appearance="outline">
+                <input class="text-xl" 
+                    matInput 
+                    required 
+                    placeholder="Title..."
+                    [(ngModel)]="survey.title">
+            </mat-form-field>
+        </div>
+        <div class="flex flex-col w-1/2">
+            <!-- <label for="desc">Description</label> -->
+            <mat-form-field name="desc" appearance="outline">
+                <input 
+                    matInput 
+                    placeholder = "Description..."
+                    [(ngModel)]="survey.description">
+            </mat-form-field>
         </div>
     </div>
-
-    <nav class="flex bg-gray-200" mat-tab-nav-bar>
+    
+    <nav class="flex bg-gray-200" mat-tab-nav-bar [tabPanel]="tabPanel">
         <a 
             mat-tab-link
-            (click)="switchPage('design')"
-            [active]="page === 'design'">
-            Design
+            (click)="switchView('design')"
+            [active]="view === 'design'">
+            Questions
         </a>
 
         <a 
             mat-tab-link
-            (click)="switchPage('preview')"
-            [active]="page === 'preview'">
+            (click)="switchView('preview')"
+            [active]="view === 'preview'">
             Preview
         </a>
     </nav>
-    <div *ngIf="page === 'design'" class="mt-0 flex min-h-0 h-full w-full bg-gray-100">
-        <div class="flex flex-col h-full w-4/6 p-6 space-y-3 overflow-y-auto">
-            <div class="flex flex-col w-full">
-                <!-- <label for="title">Title</label> -->
-                <mat-form-field name="title" class="h-12 mat-origin">
-                    <input class="text-xl" 
-                        matInput 
-                        required 
-                        placeholder="Title"
-                        [(ngModel)]="service.survey.title">
-                </mat-form-field>
-            </div>
-            <div class="flex flex-col w-full">
-                <!-- <label for="desc">Description</label> -->
-                <mat-form-field name="desc" class="h-12 mat-origin">
-                    <input 
-                        matInput 
-                        placeholder="Description"
-                        [(ngModel)]="service.survey.description">
-                </mat-form-field>
-            </div>
+    <div mat-tab-nav-panel #tabPanel class="flex min-h-0 h-full w-full bg-gray-100">
 
-            <div cdkDropList
-                    [cdkDropListData]="service.questions"
-                    (cdkDropListDropped)="onDrop($event)"
-                    class="flex flex-col w-full space-y-3">
-
-                    <div 
-                    cdkDrag
-                    *ngFor="let q of service.questions; let i = index;" 
-                    class="flex flex-row rounded-md items-start w-full bg-gray-200 py-1">
-                    <div class="flex flex-col px-2 h-full">
-                        <span class="text-lg">{{i + 1}}</span>
+        <!-- <div *ngIf="view === 'details'" class="mt-0 min-h-0 h-full w-full">
+            <div class="flex flex-col h-full p-6 items-center space-y-3 overflow-y-auto">
+                <div class="flex flex-col w-full max-w-[60rem] mx-auto">
+                    <div class="flex flex-col w-full">
+                        <label for="title">Title</label>
+                        <mat-form-field name="title" appearance="fill">
+                            <input class="text-xl" 
+                                matInput 
+                                required 
+                                [(ngModel)]="survey.title">
+                        </mat-form-field>
                     </div>
-                    <placeos-question
-                        class="flex-1"
-                        [preview]="true"
-                        [value]="q">
-                    </placeos-question>
-                    <div class="flex flex-col items-center h-full py-2">
-                        <mat-icon cdkDragHandle class="hover:cursor-move">drag_indicator</mat-icon>
-                        <button class="mt-auto" mat-icon-button (click)="onRemove(i)">
-                            <mat-icon>delete</mat-icon>
-                        </button>
+                    <div class="flex flex-col w-full">
+                        <label for="desc">Description</label>
+                        <mat-form-field name="desc" appearance="fill">
+                            <textarea 
+                                matInput 
+                                class="w-full min-h-[10rem]"
+                                [(ngModel)]="survey.description">
+                            </textarea>
+                        </mat-form-field>
                     </div>
                 </div>
-
-                <div *ngIf="service.questions?.length > 0; else noQuestion;"></div>
             </div>
+        </div> -->
 
+        <div *ngIf="view === 'design'" class="mt-0 flex min-h-0 h-full w-full">
+            <div class="flex flex-col h-full w-4/6 space-y-3 overflow-y-auto">
+
+                    <div class="flex flex-row items-center space-x-2">
+                        <nav mat-tab-nav-bar [tabPanel]="pagePanel">
+                            <a 
+                                mat-tab-link
+                                *ngFor="let p of survey.pages; let k=index;"
+                                (click)="selectedPageIndex = k;"
+                                [active]="selectedPage === p">
+                                Page {{k+1}}
+                            </a>
+                        </nav>
+                        <button mat-icon-button (click)="addSurveyPage()" title="Add new page">
+                                <mat-icon>add_circle_outline</mat-icon>
+                        </button>
+                    </div>
+                    <div class="flex flex-col py-2 px-4 pt-0 w-full overflow-x-hidden" #pagePanel>
+                        <ng-container *ngIf="selectedPage">
+                            <div  class="flex flex-row items-center justify-end space-x-2 w-full mb-4">
+                                <mat-form-field class="flex-1" [subscriptSizing]="'dynamic'" appearance="fill">
+                                    <input 
+                                        matInput 
+                                        placeholder="Page title..."
+                                        type="text" 
+                                        [(ngModel)]="selectedPage.title">
+                                </mat-form-field>
+                                <button *ngIf="selectedPageIndex > 0" 
+                                        mat-flat-button color="warn" 
+                                        (click)="removeSurveyPage(selectedPageIndex)"
+                                >
+                                    Remove page
+                                </button>
+                            </div>
+                            <div cdkDropList
+                                [cdkDropListData]="selectedPage.elements"
+                                (cdkDropListDropped)="onDrop($event,selectedPage)"
+                                class="flex flex-col w-full space-y-3">
+                
+                                <div 
+                                    cdkDrag
+                                    *ngFor="let q of selectedPage.elements; let i = index;" 
+                                    class="flex flex-row rounded-md items-start w-full bg-gray-200 py-1">
+                                    <div class="flex flex-col px-2 h-full">
+                                        <span class="text-lg">{{i + 1}}</span>
+                                    </div>
+                                    <placeos-question
+                                        class="flex-1"
+                                        [preview]="true"
+                                        [value]="q">
+                                    </placeos-question>
+                                    <div class="flex flex-col items-center h-full py-2">
+                                        <mat-icon cdkDragHandle class="hover:cursor-move">drag_indicator</mat-icon>
+                                        <button class="mt-auto" mat-icon-button (click)="onRemove(i)">
+                                            <mat-icon>delete</mat-icon>
+                                        </button>
+                                    </div>
+                                </div>
+                
+                                <div *ngIf="selectedPage?.elements?.length > 0; else noQuestion;"></div>
+                            </div>
+                        </ng-container>
+                    </div>
+    
+            </div>
+            <div class="flex flex-col w-2/6">
+                <question-bank class=" w-full"></question-bank>
+            </div>
+    
         </div>
-        <div class="flex flex-col w-2/6">
-            <question-bank class=" w-full"></question-bank>
+    
+        <div *ngIf="view === 'preview'" class="flex flex-col h-full w-full px-6 overflow-y-auto">
+            <survey *ngIf="service.surveyModel" [model]="service.surveyModel"></survey>
         </div>
-
     </div>
-
-    <div *ngIf="page === 'preview'" class="flex flex-col w-full px-6">
-        <survey *ngIf="service.surveyModel" [model]="service.surveyModel"></survey>
-    </div>
-</main>
+    
+</div>
 
 <ng-template #noQuestion>
     <div class="flex flex-col m-auto h-52 justify-center space-y-2 text-gray-600">
