--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -878,3 +878,7 @@ a[icon] {
 mat-list-option.mdc-list-item--selected{
     border-right: 3px solid rgba(#212121, 0.85);
 }
+
+#placeos .sv-question{
+    overflow-x: hidden;
+}
