feat(survey): tweak loading text alignment

--- a/apps/concierge/src/app/surveys/components/question-bank/question-bank.component.html
+++ b/apps/concierge/src/app/surveys/components/question-bank/question-bank.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-col w-full h-full bg-gray-100 border-l relative">
     <div *ngIf="(loading$ | async).length" class="flex absolute inset-0 opacity-60 bg-white dark:bg-black z-10">
-        <div class="flex flex-col m-auto">
+        <div class="flex flex-col m-auto items-center">
             <mat-spinner [diameter]="32"></mat-spinner>
             <span>{{loading$ | async}}</span>
         </div>
