fix(control): fix button styles

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -483,6 +483,7 @@ a[btn] {
     &.inverse {
         background: none;
         color: var(--color);
+        border-color: currentColor;
     }
 
     &.success {
