--- a/shared/styles/application.scss
+++ b/shared/styles/application.scss
@@ -1,4 +1,4 @@
-@import "../../node_modules/chartist/dist/scss/chartist.scss";
+@import 'chartist/dist/index.css';
 @import "./quill.min.css";
 
 :root {
