feat(survey): survey response page

--- a/shared/styles/custom-element.scss
+++ b/shared/styles/custom-element.scss
@@ -883,3 +883,10 @@ mat-list-option.mdc-list-item--selected{
 #placeos .sv-question{
     overflow-x: hidden;
 }
+
+.ct-label{
+    color:#000;
+}
+#placeos .dark .ct-label{
+    color: white;
+}
