--- a/apps/concierge/src/app/surveys/components/question-bank/question-bank.component.html
+++ b/apps/concierge/src/app/surveys/components/question-bank/question-bank.component.html
@@ -49,7 +49,7 @@
         <div
             cdkDrag
             *ngFor="let q of questions$ | async"
-            class="bg-white border flex w-full pr-2 space-x-3"
+            class="bg-white border flex w-full items-center pr-2 space-x-3"
         >
             <div
                 cdkDragHandle
@@ -61,12 +61,36 @@
                 <span>{{ q.title }}</span>
                 <span class="text-sm text-gray-600">{{ typeMap[q.type] }}</span>
             </div>
-            <button icon matRipple color="warn" title="Delete question" (click)="onDeleteQuestion(q)">
-                <mat-icon>delete</mat-icon>
+            <button
+                icon
+                matRipple
+                [matMenuTriggerFor]="actionsMenu"
+            >
+                <mat-icon>more_vert</mat-icon>
             </button>
-            <button icon matRipple (click)="onAddQuestion(q)" title="Duplicate question">
-                <mat-icon>content_copy</mat-icon>
-            </button>
+            <mat-menu #actionsMenu="matMenu">
+                <button
+                    mat-menu-item
+                    (click)="onAddQuestion(q)"
+                >
+                    <mat-icon>content_copy</mat-icon>
+                    <span>Duplicate</span>
+                </button>
+                <button
+                    mat-menu-item
+                    (click)="onEditQuestion(q)"
+                >
+                    <mat-icon>edit</mat-icon>
+                    <span>Edit</span>
+                </button>
+                <button
+                    mat-menu-item
+                    (click)="onDeleteQuestion(q)"
+                >
+                    <mat-icon>delete</mat-icon>
+                    <span>Delete</span>
+                </button>
+            </mat-menu>
         </div>
         <div *ngIf="(questions$ | async)?.length > 0; else noQuestions"></div>
     </div>
